--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:padding="8dp">
 
     <com.info.dummycontacts.RoundedImageView
@@ -18,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
@@ -27,6 +29,7 @@
             android:layout_marginLeft="10dp"
             android:gravity="center_vertical"
             android:text="test"
+
             android:textSize="18dp" />
 
         <TextView
@@ -35,6 +38,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:text="SMS"
+            android:visibility="visible"
             android:textSize="15dp" />
 
     </LinearLayout>
