--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-
     <!-- Light colors -->
     <color name="colorPrimary_light">#FFE0B2</color>
     <color name="colorPrimaryDark_light">#FFA726</color>
@@ -15,4 +11,20 @@
     <color name="colorPrimaryDark_dark">#1B5E20</color>
     <color name="colorAccent_dark">#FAFAFA</color>
     <color name="background_dark">#263238</color>
+
+    <color name="colorPrimary">#069ECF</color>
+    <color name="colorPrimaryDark">#017398</color>
+    <color name="colorAccent">#FFF000</color>
+
+    <color name="textcolorHeader">#069ECF</color>
+    <color name="textColorPrimary">#000000</color>
+    <color name="textColorSecondary">#A5A5A5</color>
+
+    <!--switch color-->
+
+    <color name="thumb_active">#069ECF</color>
+    <color name="track_active">#66069ECF</color>
+
+    <color name="thumb_inactive">#A5A5A5</color>
+    <color name="track_inactive">#66A5A5A5</color>
 </resources>
