--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
 
     <color name="colorPrimary">#069ECF</color>
     <color name="colorPrimaryDark">#017398</color>
-    <color name="colorAccent">#FFF000</color>
+    <color name="colorAccent">#FFA726</color>
 
     <color name="textcolorHeader">#069ECF</color>
     <color name="textColorPrimary">#000000</color>
