--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,4 +89,11 @@
         <item name="trackTint">@color/track_color</item>
     </style>
 
+    <style name="ErrorDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowNoTitle">true</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
 </resources>
